--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,90 @@
-
-#title img{
-   transform: scale(1.5) rotate(25deg);
- 
+@import url("https://fonts.googleapis.com/css2?family=Combo&family=Dancing+Script:wght@400;600&family=Qwitcher+Grypen:wght@700&display=swap");
+:root {
+  font-size: 62.5%;
+  font-family: "Qwitcher Grypen", cursive;
 }
 
-#press img{
-    width: 15%;
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+}
+
+#title {
+  background-color: #ff4c67;
+}
+#title .brand {
+  font-family: "Dancing Script", cursive;
+  font-size: 2rem;
+  font-weight: 600;
+}
+#title h1 {
+  font-size: 5rem;
+  font-weight: 900;
+}
+#title ul li {
+  font-size: 1.5rem;
+}
+#title button:hover {
+  background-color: black;
+}
+
+@media screen and (min-width: 769px) {
+  #title {
+    overflow: hidden;
     height: 40%;
-    margin: 30px;
+  }
+  .rotate {
+    transform: rotate(25deg);
+  }
+}
+#features h3 {
+  font-size: 2.5rem;
+}
+#features i {
+  color: #ee8072;
+  font-size: 5rem;
 }
 
+#testimonials {
+  background-color: #ee8072;
+  padding: 9rem;
+}
+#testimonials h2 {
+  font-size: 4rem;
+  padding: 0 5rem;
+}
 
+#press {
+  background-color: #ee8072;
+  padding: 9rem;
+}
+
+#pricing .title-pricing {
+  height: 30%;
+  font-size: 4rem;
+}
+#pricing button {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+#pricing button:hover {
+  background-color: black;
+}
+
+#cta {
+  background-color: #ff4c67;
+}
+#cta button {
+  font-size: 1.5rem;
+}
+
+footer i {
+  color: black;
+  font-size: 2rem;
+}/*# sourceMappingURL=styles.css.map */
